--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "body": {
       "background": {
         "type": "html",
-        "url": "https://news.ycombinator.com"
+        "url": "https://keras1n.github.io/pochkacraft.github.io/rules"
       }
     }
   }
