--- a/app.json
+++ b/app.json
@@ -3,6 +3,14 @@
     "head": {
 
     },
+    "actions": {
+        "$pull": {
+          "type": "$flush",
+          "success": {
+            "type": "$reload"
+          }
+        }
+      },
     "body": {
       "background": {
         "type": "html",
